--- a/client/src/components/songs/song/components/part/components/lineChordUnit/components/line/css/line.module.css
+++ b/client/src/components/songs/song/components/part/components/lineChordUnit/components/line/css/line.module.css
@@ -11,5 +11,5 @@
     padding: 0;
     box-shadow: none;
     box-sizing: content-box;
-    transition: box-shadow .3s, border .3s;
+    font-family: 'Indie Flower', cursive !important;
 }
