--- a/client/src/components/songs/song/css/song.module.css
+++ b/client/src/components/songs/song/css/song.module.css
@@ -30,7 +30,7 @@ input[type=range] {
     border: none;
     outline: none;
     width: 100%;
-    margin: 4px 0;
+    margin: 1px 0;
     padding: 0;
 }
 
@@ -43,10 +43,11 @@ label {
     margin:0;
 }
 em{
-    font-size: 0.7em;
+    font-size: 0.55em;
+    margin: 0;
+    position: absolute;
 }
 .playOptionsContainer{
-    width: 286px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -65,11 +66,13 @@ em{
 }
 
 .symbolsMenuHeading{
-    font-size: 0.5em;
+    font-size: 0.75em;
 }
 
 .symbolButton{
     height: 20px;
+    background: none;
+    border: none;
     width: 20px;
     padding: 0;
     margin: 0 2%;
@@ -77,6 +80,21 @@ em{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.symbolButton:hover{
+    height: 20px;
+    width: 20px;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0 2%;
+    font-size: 0.9em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: darkslateblue;
+    text-shadow: 1px 1px lightblue;
 }
 
 .slideButton{
@@ -104,7 +122,8 @@ em{
     align-items: center;
     background: none;
     border: none;
-    color: rgb(29, 249, 245);
+    color: darkslateblue;
+    text-shadow: 1px 1px lightblue;
 
 }
 
